--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URL="mongodb://localhost:27017"
+MONGO_URL=mongodb+srv://adminv2:Quickly01@clusterv2.ynyd8ca.mongodb.net/?retryWrites=true&w=majority&appName=Clusterv2
 DB_NAME="test_database"
